# the-byte-bandits

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
backend/api/: chat.py  portfolio.py  user.py
backend/api/models/: chat_model.py
backend/data_store/: market_analysis_data_store.py  portfolio_data_store.py  questionnaire_data_store.py  user_data_store.py
backend/db/: mongo.py
backend/llm/: assistant.py  conversation_manager.py  evaluation_prompts.md  instructions.txt  llm_client.py  openai_client.py
backend/llm/functions/: function_interface.py  function_manager.py  get_analytical_report.py  get_gold_market_data.py  get_real_estate_market_data.py  get_usd_market_data.py  get_user_questionnaire.py  gold_irt.py  questions.py  store_evaluation_result.py  store_investment_parameters.py  store_user_info.py  store_user_portfolio.py  submit_questionnaire.py  usdt_irt.py
backend/models/: conversation.py  market_analysis.py  portfolio.py  questionnaire.py  stream_response.py  user.py
backend/services/: crawler.py  execution.py  portfolio.py  report.py  risk.py  user.py
docker/: Dockerfile  Dockerfile.frontend
frontend/: README.md  requirements.txt
frontend/src/: app.py
frontend/src/utils/: chat_api.py
